# augmentum

./: CMakeLists.txt  INSTALL.md  LICENSE  README.md
driver/: README.md  benchmark_profiler.py  environment.yml  function_analyser.py  generate_extension.py  run_tests.sh
driver/augmentum/: AugmentumDB.py  __about__.py  __init__.py  augmentumUtils.py  benchmark_LLVM_verification.py  benchmark_SNU_make_conf.py  benchmark_SNU_verification.py  benchmark_polybench_verification.py  benchmarks.py  driver.py  function.py  functionfilter.py  heuristicDB.py  mplogging.py  objectives.py  paths.py  pathworker.py  priors.py  probes.py  sysProg.py  sysProgBuilders.py  sysUtils.py  targetfilter.py  testcasemanager.py  timer.py  type_descs.py  type_serialisation.py
driver/config/: evaluation_config.json.template  target_filter.csv.template
driver/mptools/: LICENSE  README.md  __init__.py  _mptools.py
driver/scripts/: run_evaluation.sh  run_profiling.sh
driver/test/: __init__.py  test_priors.py  test_probes.py  test_utils.py
extensions/: CMakeLists.txt  README.md
extensions/augmentum/: CMakeLists.txt  augmentum.cpp  augmentum.h  augmentum.py  internal.cpp  internal.h  python.cpp  type.cpp  type.h
extensions/augmentum_llvmpass/: CMakeLists.txt  augmentum_llvmpass.cpp  instrumentation_stats.cpp  instrumentation_stats.h  python.cpp  should_instrument.cpp  should_instrument.h  should_instrument_prior.cpp  should_instrument_prior.h  type_serialisation.cpp  type_serialisation.h  utils.cpp  utils.h
extensions/test/: CMakeLists.txt  Makefile  driver.cpp  (+9 more)
tools/: CMakeLists.txt
(+16 files in other folders)
